# mmux-unsafe-users-management

./: Makefile.am  NEWS  README  acinclude.m4  configure.ac  configure.sh  prepare.sh
doc/: macros.texi  mmux-unsafe-users-management.texi  mmux-unsafe-users-manager.man  mmux-unsafe-users.man
meta/autoconf/: mbfl.m4
meta/slackware/: doinst.sh.in
src/completions/: mmux-unsafe-users.bash
src/etc/bash_completion.d/: mmux-unsafe-users-manager.bash
src/etc/mmux/X11/: mmux-unsafe-users-management.sh
src/etc/mmux/bash_login.d/: mmux-unsafe-users-management.sh
src/etc/mmux/bash_logout.d/: mmux-unsafe-users-management.sh
src/etc/mmux/user-login.d/: mmux-unsafe-users-management.sh
src/etc/mmux/user-logout.d/: mmux-unsafe-users-management.sh
src/etc/mmux/xinitrc.d/: mmux-unsafe-users-management.sh  mmux-unsafe-users-management.sh.in
src/etc/sudoers.d/: mmux-unsafe-users-management.conf  mmux-unsafe-users-management.conf.sed
src/sbin/: mmux-unsafe-users-manager.m4  mmux-unsafe-users-manager.m4.in  mmux-unsafe-users.m4
